hphp/test/zend/bad/zend/ns_008.php
<?php
namespace test;

class foo {
}

$x = __NAMESPACE__ . "\\foo"; 
echo get_class(new $x),"\n";